--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,15 +16,13 @@ services:
     App\:
         resource: '../src/'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller/'
+    App\UserInterface\Http\Web\:
+        resource: '../src/UserInterface/Http/Web/'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
