--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "5.1.*",
@@ -71,6 +71,12 @@
             "@quality:cs:dry",
             "@quality:phpstan",
             "@quality:architecture"
+        ],
+        "tests:all": [
+            "@tests:unit"
+        ],
+        "tests:unit": [
+            "bin/phpunit --testsuite=unit"
         ]
     },
     "conflict": {
