config of messenger + services

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,14 +1,16 @@
 framework:
     messenger:
-        # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
-        # failure_transport: failed
+        default_bus: command.bus
+
+        buses:
+            command.bus: ~
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-            # async: '%env(MESSENGER_TRANSPORT_DSN)%'
-            # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+            commands:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%/commands'
+
+            sync: 'sync://'
 
         routing:
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            '*': sync
