doctrine + base docker

--- a/.env
+++ b/.env
@@ -13,6 +13,14 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+###> database ###
+DB_HOSTNAME=payroll-db
+DB_USERNAME=postgres
+DB_PASSWORD=admin
+DB_NAME=payroll_dev
+DB_PORT=5432
+###< database
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=c4bf7a5657baa3428a1c06fb16de7874
@@ -26,3 +34,11 @@ APP_SECRET=c4bf7a5657baa3428a1c06fb16de7874
 # MESSENGER_TRANSPORT_DSN=doctrine://default
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+DATABASE_URL="postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOSTNAME}:${DB_PORT}/${DB_NAME}?serverVersion=11&charset=utf8"
+###< doctrine/doctrine-bundle ###
