--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "beberlei/assert": "^3.2",
+        "composer/package-versions-deprecated": "^1.10",
+        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.7",
         "ramsey/uuid": "^4.1",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
