--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ APP_SECRET=c4bf7a5657baa3428a1c06fb16de7874
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=doctrine://default
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+ MESSENGER_TRANSPORT_DSN=sync://
 ###< symfony/messenger ###
 
 ###> doctrine/doctrine-bundle ###
