departments + workers with repo driver -> doctrine

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,3 +24,6 @@ services:
     App\Payroll\Domain\PayrollGenerator:
         $bonusCalculators:
             - !tagged_iterator payroll.bonus_calculator
+
+    App\Payroll\Domain\Workers: '@App\Payroll\Infrastructure\Doctrine\Persistence\DoctrineWorkers'
+    App\Payroll\Domain\Departments: '@App\Payroll\Infrastructure\Doctrine\Persistence\DoctrineDepartments'
