--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,10 +16,8 @@ services:
         tags: ['controller.service_arguments']
 
     _instanceof:
-        App\Common\Application\Command\Handler:
+        App\Common\CQRS\CommandHandler:
             tags: [messenger.message_handler]
-        App\Payroll\Domain\BonusCalculator:
-            tags: [payroll.bonus_calculator]
 
     App\Payroll\Domain\Workers: '@App\Payroll\Infrastructure\Doctrine\Persistence\DoctrineWorkers'
     App\Payroll\Domain\Departments: '@App\Payroll\Infrastructure\Doctrine\Persistence\DoctrineDepartments'
