--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,6 +19,6 @@ services:
         App\Common\CQRS\CommandHandler:
             tags: [messenger.message_handler]
 
-    App\Payroll\Domain\Workers: '@App\Payroll\Infrastructure\Doctrine\Persistence\DoctrineWorkers'
-    App\Payroll\Domain\Departments: '@App\Payroll\Infrastructure\Doctrine\Persistence\DoctrineDepartments'
-    App\Payroll\Domain\Payrolls: '@App\Payroll\Infrastructure\Doctrine\Persistence\DoctrinePayrolls'
+    App\Payroll\Domain\Workers: '@App\Payroll\Infrastructure\Doctrine\ORM\Domain\DoctrineORMWorkers'
+    App\Payroll\Domain\Departments: '@App\Payroll\Infrastructure\Doctrine\ORM\Domain\DoctrineORMDepartments'
+    App\Payroll\Domain\Payrolls: '@App\Payroll\Infrastructure\Doctrine\ORM\Domain\DoctrineORMPayrolls'
