fixed phpunit config

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,7 +17,7 @@
 
     <testsuites>
         <testsuite name="unit">
-            <directory>tests/Common/Unit</directory>
+            <directory>tests/Common/*/Unit</directory>
             <directory>tests/Payroll/Unit</directory>
         </testsuite>
     </testsuites>
